css/recents.styl
.recents.page
  hovered()
    cursor: pointer
    vendor('transition-property', 'background-color')
    vendor('transition-duration', 200ms)
    
    &:hover
      background-color: #E0E0E0
  
  .column > section + hr
    margin-bottom: 40px
  
  .two-thirds.column
    .board-summary:last-child:after, .discussion-summary:last-child:after
      display: block
  
  .author
    color: gray
    margin-top: 10px
    
    a
      color: #333333
      
      &:hover
        text-decoration: none
    
    .role
      display: none
  
  .subjects .list .subject-summaries
    .subject-summary
      hovered()
      padding: 10px 20px
      
      &:before
        border-left: none
        border-right: none

      img
        max-height: 200px
  
  .board.discussions .discussion-summary
    hovered()
    padding: 0 0 10px 10px
    
    .comment, .title
      max-width: 100%
      overflow: hidden
      white-space: nowrap
      text-overflow: ellipsis
  
  .collections .list, .groups .list
    .collection, .group
      hovered()
      box-sizing: border-box
      display: inline-block
      padding: 10px 20px
      width: 49%
      vertical-align: top
      
      .title a
        font-weight: bold
        color: inherit
      
      .subjects
        margin: 0 -5px
        overflow: hidden
        
        .subject
          box-sizing: border-box
          float: left
          padding: 0 5px
          width: 20%
          
          img
            width: 100%

